--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ fastapi-cache2 = "^0.2.2"
 fastapi-limiter = "^0.1.6"
 requests = "^2.32.3"
 pymongo = "^4.13.0"
+jdatetime = "^5.2.0"
+sshtunnel = "^0.4.0"
+pymysql = "^1.1.1"
+pandas = "^2.2.3"
+pydantic = "^2.11.5"
 
 
 [build-system]
