--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pymongo = "^4.13.0"
 jdatetime = "^5.2.0"
 sshtunnel = "^0.4.0"
 pymysql = "^1.1.1"
+pandas = "^2.2.3"
+pydantic = "^2.11.5"
 
 
 [build-system]
