--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,10 +20,10 @@ RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi --only main
 
 # Copy backend code
-COPY backend ./backend
+COPY backend .
 
 # Expose port
 EXPOSE 8000
 
 # Start the app
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"] 
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info"] 
